@@ -1,5 +1,7 @@
 
 0.9.10 Jul 04, 2005
+ * updated configuration parser to detect sources with spaces at the end
+   and updated handling of sources without trailing slashes
  * check in update_pkg_cache() to make sure patch_pkgs is initialized
 
 0.9.9m Jun 30, 2005
